tabbs now show current

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <nav class="tab-buttons">
 	<ul>
-		<li><a href="#tab-1" class="ajax-in1">Tab-1</a></li>
+		<li><a href="#tab-1" class="ajax-in1" class="active">Tab-1</a></li>
 		<li><a href="#tab-2" class="ajax-in2">Tab-2</a></li>
 		<li><a href="#tab-3" class="ajax-in3">Tab-3</a></li>
 		<li><a href="#tab-4" class="ajax-in4">Tab-4</a></li>
